# dieuscord-bot

./: .gitignore  README.md  basic.py  config.py  pyproject.toml  sample.env
