[tool.poetry]
name = "dieuscord-bot"
version = "0.1.0"
description = ""
authors = ["Jonathan Dieu <jonathanhuydieu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
